...
            )
        },
        floatingActionButton = {
            GlassFloatingActionButton(
                onClick = { showAddEntryDialog = true },
                icon = Icons.Default.Add,
                contentDescription = "Add Entry",
                accentColor = CustomGray
            )
        }
    ) { padding ->
        if (state.selectedSectionEntries.isEmpty()) {
            Box(modifier = Modifier.fillMaxSize().padding(padding), contentAlignment = Alignment.Center) {
...
